--- a/preamble.tex
+++ b/preamble.tex
@@ -87,7 +87,7 @@
     \end{frame}
 }
 
-\setbeamercolor{frametitle}{fg=blue}
+\setbeamercolor{frametitle}{fg=black}  % used to be blue
 \setbeamercolor{title}{fg=black}
 \setbeamertemplate{footline}[frame number]
 \setbeamertemplate{navigation symbols}{}
