hides certain professional/personal info and adds main.pdf

--- a/main.tex
+++ b/main.tex
@@ -13,11 +13,11 @@
 % \author{\large \textbf{Huascar A. Sanchez}}
 \author[HAS]{
 % \author[HAS \& DS]{
-\parbox[t]{1.5in}{Huascar Sanchez \\\small\texttt{huascar.sanchez@sri.com}} %\hspace{.3in}
+\parbox[t]{1.5in}{Huascar Sanchez \\\small\texttt{no.email.now}} %\hspace{.3in}
 % \and
 % \parbox[t]{1.5in}{Second Author \\\small\texttt{second.author@sri.com}}
 }
-\institute[]{\large SRI International}
+\institute[]{\large Some Research Lab}
 
 \date{\today}
 
@@ -96,11 +96,10 @@
 \begin{frame}[fragile]{\textbf{Q. Can you give an example of Supervised Learning?}}
   \vspace{.4em}
   \begin{wideitemize}
-    \item \textcolor{blue}{\textbf{Support vector machines} or \textbf{SVM}}
-    \item In \textbf{SVM}, the goal is to construct the optimal separating
-    \textit{hyperplane} between pieces of data; e.g., between clusters of data
-    represented by labels A and B.\vspace{.4em}
+    \item \textcolor{blue}{\textbf{Support vector machines} or \textbf{SVM}}, which
+    goal is to construct the optimal separating \textit{hyperplane} between pieces of data; e.g.,
     \begin{wideitemize}
+      \item[-] Say a hyperplane between clusters of data represented by labels A and B.
       \item[-] These clusters sit in some high dimensional space, and the idea is to
       construct a plane that maximizes the margins between the plane and the data.
       \item[-] If a new datum sits closer to one area of the data, say A, then
